[gd_scene load_steps=22 format=3 uid="uid://cdmf24rrpgcwh"]

[ext_resource type="Script" path="res://entities/common/states/state_machine.gd" id="1_mhxim"]
[ext_resource type="Script" path="res://entities/player/player.gd" id="1_xxalr"]
[ext_resource type="Texture2D" uid="uid://d1i874ejrs6rb" path="res://entities/player/sprites/player.png" id="1_y2cof"]
[ext_resource type="PackedScene" uid="uid://dodt5cesi7jvv" path="res://camera/camera.tscn" id="2_lowok"]
[ext_resource type="Script" path="res://entities/player/states/player_idle.gd" id="2_ojeyt"]
[ext_resource type="Script" path="res://entities/player/states/player_move.gd" id="3_aodc5"]
[ext_resource type="PackedScene" uid="uid://b6y8e2p30n8by" path="res://entities/common/health_component/health_component.tscn" id="3_jur7g"]
[ext_resource type="Script" path="res://entities/player/states/player_hurt.gd" id="8_bb587"]
[ext_resource type="Script" path="res://entities/player/states/player_death.gd" id="9_3c4r8"]
[ext_resource type="PackedScene" uid="uid://coipvyefwrgcy" path="res://entities/player/item_component/item_component.tscn" id="9_b827w"]
[ext_resource type="PackedScene" uid="uid://dyk6dgdvdp0h0" path="res://entities/common/hurtbox/hurtbox.tscn" id="10_lvwuy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l1ta0"]
atlas = ExtResource("1_y2cof")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jeko"]
atlas = ExtResource("1_y2cof")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wia8h"]
atlas = ExtResource("1_y2cof")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r31sw"]
atlas = ExtResource("1_y2cof")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bn0b"]
atlas = ExtResource("1_y2cof")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwdsp"]
atlas = ExtResource("1_y2cof")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7dyd"]
atlas = ExtResource("1_y2cof")
region = Rect2(96, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8wpxw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1ta0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jeko")
}],
"loop": false,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wia8h")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r31sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bn0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwdsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7dyd")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_437jv"]
radius = 6.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p3ecu"]
radius = 7.0
height = 16.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_layer = 2
collision_mask = 5
script = ExtResource("1_xxalr")
speed = 80

[node name="Camera" parent="." instance=ExtResource("2_lowok")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8wpxw")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("CapsuleShape2D_437jv")

[node name="HealthComponent" parent="." instance=ExtResource("3_jur7g")]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("1_mhxim")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "sprite")]
script = ExtResource("2_ojeyt")
player = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")

[node name="Move" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "sprite")]
script = ExtResource("3_aodc5")
player = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")

[node name="Hurt" type="Node" parent="StateMachine" node_paths=PackedStringArray("sprite", "audio_player")]
script = ExtResource("8_bb587")
sprite = NodePath("../../AnimatedSprite2D")
audio_player = NodePath("../../AudioStreamPlayer")

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("player", "sprite", "audio_player")]
script = ExtResource("9_3c4r8")
player = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")
audio_player = NodePath("../../AudioStreamPlayer")

[node name="ItemComponent" parent="." instance=ExtResource("9_b827w")]
position = Vector2(0, 9)

[node name="ItemSlot" parent="ItemComponent" index="0"]
position = Vector2(12, 0)

[node name="Hurtbox" parent="." instance=ExtResource("10_lvwuy")]
position = Vector2(0, 9)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CapsuleShape2D_p3ecu")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="damaged" from="HealthComponent" to="." method="_on_health_component_damaged"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="ItemComponent"]
[editable path="Hurtbox"]
